k8s-dockercoins.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dockercoins
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: dockercoins
spec:
#  replicas: 3
  selector:
    matchLabels:
      tier: worker
  template:
    metadata:
      labels:
        tier: worker
    spec:
      containers:
      - name: worker
        image: AYADIAnis23/worker:6
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rng
  namespace: dockercoins
spec:
#  replicas: 3
  selector:
    matchLabels:
      tier: rng
  template:
    metadata:
      labels:
        tier: rng
    spec:
      containers:
      - name: rng
        image: brahimhamdi/rng
        resources:
          requests:
            memory: "300Mi"
            cpu: "100m"
          limits:
            memory: "600Mi"
            cpu: "200m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hasher
  namespace: dockercoins
spec:
#  replicas: 3
  selector:
    matchLabels:
      tier: hasher
  template:
    metadata:
      labels:
        tier: hasher
    spec:
      containers:
      - name: hasher
        image: brahimhamdi/hasher
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: dockercoins
spec:
#  replicas: 3
  selector:
    matchLabels:
      tier: redis
  template:
    metadata:
      labels:
        tier: redis
    spec:
      containers:
      - name: redis
        image: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui
  namespace: dockercoins
spec:
#  replicas: 3
  selector:
    matchLabels:
      tier: webui
  template:
    metadata:
      labels:
        tier: webui
    spec:
      containers:
      - name: webui
        image: brahimhamdi/webui
---
apiVersion: v1
kind: Service
metadata:
  name: rng
  namespace: dockercoins
spec:
  selector:
    tier: rng
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: hasher
  namespace: dockercoins
spec:
  selector:
    tier: hasher
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: dockercoins
spec:
  selector:
    tier: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: webui
  namespace: dockercoins
spec:
  selector:
    tier: webui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker-netpol
  namespace: dockercoins
spec:
  podSelector:
    matchLabels:
      tier: worker
  egress:
  - to:
    - podSelector:
        matchLabels:
          tier: rng
    ports:
    - port: 80
  - to:
    - podSelector:
        matchLabels:
          tier: hasher
    ports:
    - port: 80
  - to:
    - podSelector:
        matchLabels:
          tier: redis
    ports:
    - port: 6379
  - to:
     - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rng-netpol
  namespace: dockercoins
spec:
  podSelector:
    matchLabels:
      tier: rng
  ingress:
  - from:
    - podSelector:
        matchLabels:
          tier: worker
    ports:
    - port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-netpol
  namespace: dockercoins
spec:
  podSelector:
    matchLabels:
      tier: redis
  ingress:
  - from:
    - podSelector:
        matchLabels:
          tier: worker
    ports:
    - port: 6379
  - from:
    - podSelector:
        matchLabels:
          tier: webui
    ports:
    - port: 6379
